--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
 pandas
+numpy
 joblib
 plotly
 streamlit-option-menu
-scikit-learn
+scikit-learn==1.3.2
+xgboost
 imbalanced-learn
-
 category_encoders
-
